# dace_trace_gen

./: Cargo.toml  README.md
.github/workflows/: notify.yml
src/: lib.rs  main.rs  trace.rs
