[package]
name = "dace_trace_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dace_toolbox = { git = "https://github.com/YanghuiWu/dace_toolbox" }
dace = { git = "https://github.com/YanghuiWu/dace"}
dace_tests = { git = "https://github.com/YanghuiWu/dace_tests" }
static_ri = { git = "https://github.com/YanghuiWu/ri" }
tracing = "0.1.37"
fxhash = "0.2.1"
tracing-subscriber = "0.3.17"
